// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fallback protokol nad runem WoZ testu > dnešní pásmová vrstva (kontrolní rameno bez fragmentů) 1`] = `
[
  {
    "odstavce": [
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě hodnotím jako promarněné, každou po svém. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Naražené rameno“. Náklad zůstal na voze.",
    ],
    "titulek": "Překladiště v Syracuse",
  },
  {
    "odstavce": [
      "Zjištěno, že v tomto bodě trasy nedošlo k ničemu, co by zakládalo úřední úkon. Všechny čtyři úlohy obstály; následek žádný, ztráta žádná. Při odjezdu se z místa ztratil ještě jeden kus, jehož původ zůstává neobjasněn a objasněn nebude.",
    ],
    "titulek": "Odstavený vagon v Peekskillu",
  },
  {
    "odstavce": [
      "Průchod tímto bodem trasy hodnotím jako uspokojivý, byť ne úplný. Jedna ze čtyř úloh nedopadla; následky z toho neplynou žádné, na nákladu ani na osobách. Stav nákladu: šest beden. Hlášení k místu jsem přijal ústně a dále je nešířil.",
    ],
    "titulek": "Zátaras u Verony",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
    ],
    "titulek": "Starý most přes Mohawk",
  },
  {
    "odstavce": [
      "Pozornost zákona v tomto úseku vzrostla natolik, že byla přes noc zřízena silniční kontrola, v hlášení vedená jako Zátah na páté silnici. Obě průjezdné cesty byly svedeny na ni; jinudy se projet nedalo. Průběh zaznamenávám níže.",
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě hodnotím jako promarněné, každou po svém. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Zvonění v uších“. Náklad zůstal na voze.",
    ],
    "titulek": "Zátah na páté silnici",
  },
  {
    "odstavce": [
      "V bodě hlášeném jako Most u Poughkeepsie byla nastražena léčka; pronásledovatel znal cestu předem, což mě přivádí k otázce, od koho. Vystoupit z vozu nikdo nestihl. Výsledek zaznamenávám níže.",
      "Tento bod trasy je nutno označit za průšvih v plném úředním významu slova. K dispozici byly „Petrolejová lampa“, „Mosazný boxer“, „Rezervní pneumatika“ a „Řeznický hák“; sestavu hodnotím jako nedomyšlenou, a to je nejmírnější slovo, které mě napadá. Podezřelý Bartoš je veden s těžkým následkem „Otřes mozku“, který se sám nespraví. Náklad se ztenčil o jedna bedna, zbývá pět beden. Pozornost zákona v okolí tím citelně vzrostla.",
    ],
    "titulek": "Most u Poughkeepsie",
  },
  {
    "odstavce": [
      "Pozornost zákona dostoupila vrcholu a došlo k přímé konfrontaci s pronásledovatelem. O nákladu i o osobách rozhodl jediný střet, bez možnosti odvolání. Výsledek uvádím níže, bez příkras.",
      "K úkonům jsou ve spisu vedeny „Uříznutá hlaveň“, „Starý kompas“, „Slzy na povel“ a „Dámský revolver“; volba nástrojů k jednotlivým rolím vzbuzuje otázky, na které tu nikdo neodpoví. Polovina úloh vyšla, polovina nikoli, což zdejší poměry vystihuje přesně. Podezřelý Bartoš je veden s následkem „Naražené rameno“; jak dlouho mu vydrží, se neuvádí. (Zapisuji bez soucitu, byť s pochopením.)",
    ],
    "titulek": "Kolona na albanské poštovní silnici",
  },
  {
    "odstavce": [
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; k ostatním nemám co dodat nad rámec zápisu. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: čtyři bedny. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Podezřelý Bartoš dosáhl počtu následků, po kterém už není k ničemu, a byl odklizen do vozu. Co bylo lehčího, ztrácí se ležením; co těžšího, nikoli. Kdy se posadí, nechává spis otevřené. Do té doby je veden jako nezpůsobilý.",
    ],
    "titulek": "Mýtnice za Batavií",
  },
  {
    "odstavce": [
      "Náklad byl navzdory všemu doručen na místo určení; stav nákladu při předání: čtyři bedny. Kdo jej předával, rozplynul se dřív, než stačil kdokoli zapsat jméno správně. Spis se tímto uzavírá razítkem DORUČENO. (Zdejší úřad k věci dále nic nemá; ostatně nikdy neměl.)",
    ],
    "titulek": "Uzavření spisu — DORUCENO",
  },
]
`;

exports[`golden fallback protokol nad runem WoZ testu > s fragmentovou vrstvou 1`] = `
[
  {
    "odstavce": [
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě hodnotím jako promarněné, každou po svém. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Naražené rameno“. Náklad zůstal na voze.",
      "Bod „Zatlačit hrubě“ byl vyřízen bez okolků; postarala se o to věc „Dědečkova brokovnice“. Položka „Kanystr benzínu“ byla k úkonu „Odsunout závoru“ přinesena a tím její účast skončila. K úkonu „Podmáznout dlaň“ byla vedena věc „Hovězí vývar“; právě k té stránce se nepřihlíželo. Námitky k úkolu „Zmást papírem“ nikdo nevznesl, přestože se k němu předložila položka „Kněžský kolárek“.",
    ],
    "titulek": "Překladiště v Syracuse",
  },
  {
    "odstavce": [
      "Zjištěno, že v tomto bodě trasy nedošlo k ničemu, co by zakládalo úřední úkon. Všechny čtyři úlohy obstály; následek žádný, ztráta žádná. Při odjezdu se z místa ztratil ještě jeden kus, jehož původ zůstává neobjasněn a objasněn nebude.",
      "K bodu „Proklouznout kolem“ byl předložen předmět vedený jako „Provaz a kladka“ s výkladem, který nikdo nezkoumal. Věci „Lopata“ připadl úkol „Vypáčit vagon“ a při kontrole to nikomu nepřišlo divné. Tlak na úkol „Ztuhnout ve stínu“ zachytila položka „Kastrol na hlavě“ a nepovolila ani o píď. K bodu „Kdyby se probudil“ nastoupila věc „Páčidlo“; podruhé se o odpor nikdo nepokusil.",
    ],
    "titulek": "Odstavený vagon v Peekskillu",
  },
  {
    "odstavce": [
      "Průchod tímto bodem trasy hodnotím jako uspokojivý, byť ne úplný. Jedna ze čtyř úloh nedopadla; následky z toho neplynou žádné, na nákladu ani na osobách. Stav nákladu: šest beden. Hlášení k místu jsem přijal ústně a dále je nešířil.",
      "Předmět vedený jako „Bedna kanadské“ byl na úkol „Postavit se jim“ zjevně slabý a nikdo se tím netajil. U kolonky „Ustát nápor“ stačilo, že věc „Plechová vesta“ zůstala, kde byla. Úkol „Vyklouznout stranou“ vyřešila položka „Konev na mléko“ způsobem, který se do formuláře nevejde. Bod „Tasit včas a první“ skončil dřív, než se stačil rozvinout; postarala se o to položka „Ukradený samopal“.",
    ],
    "titulek": "Zátaras u Verony",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
      "Práci u úkolu „Zvednout závoru“ měla zastat věc „Kožená zástěra“; na to byla krátká. Úkon „Zpevnit prkna“ stál na dvou vlastnostech naráz; položka „Medvědí kožich“ je pohromadě neměla. Věci „Schovaná pistole“ připadl úkol „Projet dírou“ a při kontrole to nikomu nepřišlo divné. Bod „Nedat to na sobě“ byl vyřízen bez okolků; postarala se o to věc „Tlustá bible“.",
    ],
    "titulek": "Starý most přes Mohawk",
  },
  {
    "odstavce": [
      "Pozornost zákona v tomto úseku vzrostla natolik, že byla přes noc zřízena silniční kontrola, v hlášení vedená jako Zátah na páté silnici. Obě průjezdné cesty byly svedeny na ni; jinudy se projet nedalo. Průběh zaznamenávám níže.",
      "Na uvedeném místě obstály dvě úlohy ze čtyř. Zbylé dvě hodnotím jako promarněné, každou po svém. Podezřelý Bartoš je od té chvíle ve spisu veden s následkem „Zvonění v uších“. Náklad zůstal na voze.",
      "Do úkonu „Prorazit blokádu“ se položka „Banánový kanón“ opřela zhurta, a přesto slabě. U úkolu „Strhnout do postranní“ odvedla položka „Svářečka“ práci, ke které je určena, a nic nad ni. Nedostatečnost nutno přiznat: k úkolu „Zmizet v ulicích“ šla položka „Sekáček na led“ a nepostačila. U kolonky „Držet nervy u okna“ stačilo, že věc „Pytel cementu“ zůstala, kde byla.",
    ],
    "titulek": "Zátah na páté silnici",
  },
  {
    "odstavce": [
      "V bodě hlášeném jako Most u Poughkeepsie byla nastražena léčka; pronásledovatel znal cestu předem, což mě přivádí k otázce, od koho. Vystoupit z vozu nikdo nestihl. Výsledek zaznamenávám níže.",
      "Tento bod trasy je nutno označit za průšvih v plném úředním významu slova. K dispozici byly „Petrolejová lampa“, „Mosazný boxer“, „Rezervní pneumatika“ a „Řeznický hák“; sestavu hodnotím jako nedomyšlenou, a to je nejmírnější slovo, které mě napadá. Podezřelý Bartoš je veden s těžkým následkem „Otřes mozku“, který se sám nespraví. Náklad se ztenčil o jedna bedna, zbývá pět beden. Pozornost zákona v okolí tím citelně vzrostla.",
      "U úkonu „Zapřít totožnost“ se z předmětu vedeného jako „Petrolejová lampa“ nedalo vytlouct nic použitelného. Spis k úkolu „Nedat na sobě znát“ bez údivu konstatuje, že věc „Mosazný boxer“ zůstala za očekáváním. Nedostatečnost nutno přiznat: k úkolu „Objet ho stranou“ šla položka „Rezervní pneumatika“ a nepostačila. Námitky k úkolu „Kdyby sáhl po zbrani“ nikdo nevznesl, přestože se k němu předložila položka „Řeznický hák“.",
    ],
    "titulek": "Most u Poughkeepsie",
  },
  {
    "odstavce": [
      "Pozornost zákona dostoupila vrcholu a došlo k přímé konfrontaci s pronásledovatelem. O nákladu i o osobách rozhodl jediný střet, bez možnosti odvolání. Výsledek uvádím níže, bez příkras.",
      "K úkonům jsou ve spisu vedeny „Uříznutá hlaveň“, „Starý kompas“, „Slzy na povel“ a „Dámský revolver“; volba nástrojů k jednotlivým rolím vzbuzuje otázky, na které tu nikdo neodpoví. Polovina úloh vyšla, polovina nikoli, což zdejší poměry vystihuje přesně. Podezřelý Bartoš je veden s následkem „Naražené rameno“; jak dlouho mu vydrží, se neuvádí. (Zapisuji bez soucitu, byť s pochopením.)",
      "K bodu „Probít se ven“ nastoupila věc „Uříznutá hlaveň“; podruhé se o odpor nikdo nepokusil. Věc „Starý kompas“ se u úkonu „Ustát salvu“ udržela jen do chvíle, kdy na tom začalo záležet. K bodu „Strhnout do pole“ byl předložen předmět vedený jako „Slzy na povel“ s výkladem, který nikdo nezkoumal. Důraz, který se u bodu „Krýt záda“ očekával, věc „Dámský revolver“ nepřinesla.",
    ],
    "titulek": "Kolona na albanské poštovní silnici",
  },
  {
    "odstavce": [
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; k ostatním nemám co dodat nad rámec zápisu. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: čtyři bedny. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Předmět vedený jako „Balík bankovek“ přišel k úkolu „Silniční poplatek“ se schopností, která tu neplatila. Výmluva postavená na položce „Dědkův kabát“ neobstála u úkolu „Zamluvit to“ ani na první pohled. Tlak na úkol „Klidná tvář“ zachytila položka „Pytel brambor“ a nepovolila ani o píď. Předmět vedený jako „Stříbrná placatka“ byl na úkol „Kdyby přituhlo“ zjevně slabý a nikdo se tím netajil.",
      "Podezřelý Bartoš dosáhl počtu následků, po kterém už není k ničemu, a byl odklizen do vozu. Co bylo lehčího, ztrácí se ležením; co těžšího, nikoli. Kdy se posadí, nechává spis otevřené. Do té doby je veden jako nezpůsobilý.",
    ],
    "titulek": "Mýtnice za Batavií",
  },
  {
    "odstavce": [
      "Náklad byl navzdory všemu doručen na místo určení; stav nákladu při předání: čtyři bedny. Kdo jej předával, rozplynul se dřív, než stačil kdokoli zapsat jméno správně. Spis se tímto uzavírá razítkem DORUČENO. (Zdejší úřad k věci dále nic nemá; ostatně nikdy neměl.)",
    ],
    "titulek": "Uzavření spisu — DORUCENO",
  },
]
`;

exports[`golden nad runem se složením postavy (pokrytí N2) > spis se složením postavy 1`] = `
[
  {
    "odstavce": [
      "V úseku vedeném jako Farmářův brod obstály všechny čtyři úlohy. Ve spisu jsou k nim vedeny „Vycpaný páv“, „Mosazný boxer“, „Bedna kanadské“ a „Dědečkova brokovnice“, a poprvé za dlouhou dobu se každý kus hodil tam, kam byl dán. Náklad zůstal nedotčen — stav nákladu: šest beden. Z místa nadto zmizel kus, který dosud nikdo nenahlásil jako pohřešovaný. (Bezvadné hlášení se mi píše hůř než přiznání.)",
      "Věci „Vycpaný páv“ připadl úkol „Zaplatit za vytažení“ a při kontrole to nikomu nepřišlo divné. Tlak na úkol „Nezvednout hlas“ zachytila položka „Mosazný boxer“ a nepovolila ani o píď. Námitky k úkolu „Zapřáhnout a táhnout“ nikdo nevznesl, přestože se k němu předložila položka „Bedna kanadské“. Bod „Kdyby začal vyvádět“ skončil dřív, než se stačil rozvinout; postarala se o to položka „Dědečkova brokovnice“.",
    ],
    "titulek": "Farmářův brod",
  },
  {
    "odstavce": [
      "V úseku vedeném jako Celnice v Albany zůstaly dvě ze čtyř úloh nezvládnuté. Vypomoci mělo to, co bylo po ruce: „Kuřecí stehýnko“, „Panenka s dutinou“, „Tulení ocas“ a „Sádrový obvaz“. Následkem toho je záznam vedený jako „Roztřesené ruce“. Náklad zůstal nedotčen; stav nákladu: šest beden.",
      "Úkol „Věrohodný list“ vyřešila položka „Kuřecí stehýnko“ způsobem, který se do formuláře nevejde. Spis k úkolu „Dorazit razítko“ bez údivu konstatuje, že věc „Panenka s dutinou“ zůstala za očekáváním. Nedostatečnost nutno přiznat: k úkolu „Něco navíc“ šla položka „Tulení ocas“ a nepostačila. U kolonky „Ani nemrknout“ stačilo, že věc „Sádrový obvaz“ zůstala, kde byla.",
    ],
    "titulek": "Celnice v Albany",
  },
  {
    "odstavce": [
      "Pozornost zákona v tomto úseku vzrostla natolik, že byla přes noc zřízena silniční kontrola, v hlášení vedená jako Zátah na páté silnici. Obě průjezdné cesty byly svedeny na ni; jinudy se projet nedalo. Průběh zaznamenávám níže.",
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; k ostatním nemám co dodat nad rámec zápisu. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: pět beden. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Do úkonu „Prorazit blokádu“ se položka „Hroznová cihla“ opřela zhurta, a přesto slabě. Věc „Svářečka“ byla u bodu „Strhnout do postranní“ uznána za dostatečné vybavení a dál se o tom nejednalo. Výmluva postavená na položce „Hovězí vývar“ neobstála u úkolu „Zmizet v ulicích“ ani na první pohled. Předmět vedený jako „Krunýř mořské želvy“ byl na úkol „Držet nervy u okna“ zjevně slabý a nikdo se tím netajil.",
    ],
    "titulek": "Zátah na páté silnici",
  },
  {
    "odstavce": [
      "V úseku vedeném jako Mýtnice za Batavií obstály tři úlohy ze čtyř. Čtvrtá zůstala nezvládnutá, aniž by to komukoli přineslo následky. K úkonům jsou ve spisu vedeny „Zubařské kleště“, „Ohřívací láhev“, „Sud zelí“ a „Sekáček na led“; sestavu jako celek hodnotím zdrženlivě. Stav nákladu: pět beden.",
      "U úkonu „Silniční poplatek“ byla rozhodná vlastnost vyřazena a položka „Zubařské kleště“ tím pozbyla smyslu. Bod „Zamluvit to“ byl vyřízen bez okolků; postarala se o to věc „Ohřívací láhev“. Námitky k úkolu „Klidná tvář“ nikdo nevznesl, přestože se k němu předložila položka „Sud zelí“. K bodu „Kdyby přituhlo“ nastoupila věc „Sekáček na led“; podruhé se o odpor nikdo nepokusil.",
    ],
    "titulek": "Mýtnice za Batavií",
  },
  {
    "odstavce": [
      "V bodě hlášeném jako Most u Poughkeepsie byla nastražena léčka; pronásledovatel znal cestu předem, což mě přivádí k otázce, od koho. Vystoupit z vozu nikdo nestihl. Výsledek zaznamenávám níže.",
      "Škoda se vyčísluje takto: jedna bedna z korby a vzrostlá pozornost zákona v celém okrsku. Těžký následek „Otřes mozku“ nese podezřelý Bartoš. Příčinou byla nanejvýš jediná zdařilá úloha ze čtyř. Zbývá čtyři bedny.",
      "U úkonu „Zapřít totožnost“ se z předmětu vedeného jako „Konev na mléko“ nedalo vytlouct nic použitelného. Věc „Mešní víno“ se u úkonu „Nedat na sobě znát“ udržela jen do chvíle, kdy na tom začalo záležet. Práci u úkolu „Objet ho stranou“ měla zastat věc „Rezervní pneumatika“; na to byla krátká. Podezřelý Bartoš podléhá omezení, a věc „Zdobená bambitka“ tak u úkolu „Kdyby sáhl po zbrani“ nic nezmohla.",
    ],
    "titulek": "Most u Poughkeepsie",
  },
  {
    "odstavce": [
      "Pozornost zákona dostoupila vrcholu a došlo k přímé konfrontaci s pronásledovatelem. O nákladu i o osobách rozhodl jediný střet, bez možnosti odvolání. Výsledek uvádím níže, bez příkras.",
      "Věc v tomto bodě trasy nevyžaduje opatření. Jedna ze čtyř úloh sice nedopadla, ale bez následků pro osoby i pro náklad. Spis odkládám do příštího hlášení.",
      "Vlastnost, kterou se položka „Dámský revolver“ vyznačuje, se u úkolu „Probít se ven“ nesměla uplatnit. U kolonky „Ustát salvu“ stačilo, že věc „Pytel cementu“ zůstala, kde byla. K bodu „Strhnout do pole“ byl předložen předmět vedený jako „Banánový kanón“ s výkladem, který nikdo nezkoumal. Věci „Kanystr benzínu“ připadl úkol „Krýt záda“ a při kontrole to nikomu nepřišlo divné.",
    ],
    "titulek": "Kolona na albanské poštovní silnici",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
      "K bodu „Proklouznout kolem“ byl předložen předmět vedený jako „Falešný odznak“ s výkladem, který nikdo nezkoumal. U úkolu „Vypáčit vagon“ odvedla položka „Pivovarská hadice“ práci, ke které je určena, a nic nad ni. U úkolu „Ztuhnout ve stínu“ měla vydržet položka „Stříbrná placatka“; povolila hned zkraje. Důraz, který se u bodu „Kdyby se probudil“ očekával, věc „Volská kůže“ nepřinesla.",
      "Podezřelý Bartoš nasbíral třetí následek v pořadí a tím přestal být k užitku. Byl uložen do vozu; výslech na místě nepřicházel v úvahu. Co se z toho dá vyležet, vyleží; co ne, veze si dál. Zastoupit ho nemá kdo, a spis k tomu nemá co dodat.",
    ],
    "titulek": "Odstavený vagon v Peekskillu",
  },
  {
    "odstavce": [
      "Průběh v tomto bodě trasy hodnotím jako selhání, byť se k němu nikdo výslovně nepřihlásil. Ze čtyř úloh obstála nanejvýš jediná; k ostatním nemám co dodat nad rámec zápisu. Z vozu se poroučelo, co drželo hůř než ostatní; stav nákladu: tři bedny. Pozornost zákona tím v okolí vzrostla, což poznamenávám bez zadostiučinění.",
      "Úkol „Držet nervy“ zůstal bez obsazení; ve spisu k němu není zapsáno nic. Nevyplněno — u bodu „Zamluvit to“ nestál nikdo ani nic. Ke kolonce „Zastrašit gestem“ neuvádí spis ani věc, ani osobu; místo zůstalo prázdné. Nevyplněno — u bodu „Najít skulinu“ nestál nikdo ani nic.",
      "Podezřelý Bartoš se posadil a je od tohoto bodu opět veden jako činný účastník. Jak dlouho ve voze ležel, spis nezaznamenává; nikdo to neměřil. Zda si z toho odnesl poučení, rovněž neuvádím. (Škoda; ve voze byl přehlednější.)",
    ],
    "titulek": "Slepá ulička v Bronxu",
  },
  {
    "odstavce": [
      "Spis k tomuto bodu trasy nevyznívá ani dobře, ani zle, což je na téhle silnici nadprůměr. Dvě úlohy ze čtyř zůstaly nezvládnuté. Co z toho komu zůstalo, se dozvím z hlášení okrsku, až nějaké dorazí.",
      "U úkonu „Splynout s davem“ se z předmětu vedeného jako „Provaz a kladka“ nedalo vytlouct nic použitelného. U úkolu „Zajet do postranní“ odvedla položka „Kostelní klíč“ práci, ke které je určena, a nic nad ni. Předmět vedený jako „Starý kompas“ byl na úkol „Zahodit stopu“ zjevně slabý a nikdo se tím netajil. Bod „Klid v návalu“ byl vyřízen bez okolků; postarala se o to věc „Pytel brambor“.",
      "Podezřelý Bartoš dosáhl počtu následků, po kterém už není k ničemu, a byl odklizen do vozu. Co bylo lehčího, ztrácí se ležením; co těžšího, nikoli. Kdy se posadí, nechává spis otevřené. Do té doby je veden jako nezpůsobilý.",
      "Podezřelý Bartoš se posadil a je od tohoto bodu opět veden jako činný účastník. Jak dlouho ve voze ležel, spis nezaznamenává; nikdo to neměřil. Zda si z toho odnesl poučení, rovněž neuvádím. (Škoda; ve voze byl přehlednější.)",
    ],
    "titulek": "Yonkerské ulice v poplachu",
  },
  {
    "odstavce": [
      "Zboží dorazilo do New Yorku a přešlo do rukou, jejichž popis spis neobsahuje. Předáno bylo: tři bedny. Zadržen nebyl nikdo, neboť nikdo z přítomných orgánů nikoho neviděl. Věc uzavírám razítkem DORUČENO a vracím se ke svým povinnostem.",
    ],
    "titulek": "Uzavření spisu — DORUCENO",
  },
]
`;
